crates/ars-components/src/overlay/snapshots/ars_components__overlay__floating_panel__tests__floating_panel_resize_handle_w.snap
---
source: crates/ars-components/src/overlay/floating_panel.rs
expression: "snapshot_attrs(&api.resize_handle_attrs(ResizeHandle::W))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-handle",
            ),
            String(
                "w",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "resize-handle",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "floating-panel",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Resize left",
            ),
        ),
    ],
    styles: [
        (
            Cursor,
            "ew-resize",
        ),
    ],
}
