crates/ars-components/src/overlay/snapshots/ars_components__overlay__floating_panel__tests__floating_panel_root_maximized.snap
---
source: crates/ars-components/src/overlay/floating_panel.rs
expression: snapshot_attrs(&maximized.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-focus-visible",
            ),
            String(
                "true",
            ),
        ),
        (
            Data(
                "ars-maximized",
            ),
            String(
                "true",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "floating-panel",
            ),
        ),
        (
            Data(
                "ars-stage",
            ),
            String(
                "maximized",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "maximized",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "floating-panel-title",
            ),
        ),
        (
            Aria(
                Modal,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "floating-panel",
            ),
        ),
        (
            Role,
            String(
                "dialog",
            ),
        ),
    ],
    styles: [
        (
            Width,
            "900px",
        ),
        (
            Height,
            "700px",
        ),
        (
            Position,
            "fixed",
        ),
        (
            Top,
            "0px",
        ),
        (
            Left,
            "0px",
        ),
        (
            ZIndex,
            "90",
        ),
    ],
}
