crates/ars-components/src/overlay/snapshots/ars_components__overlay__floating_panel__tests__floating_panel_root_minimized.snap
---
source: crates/ars-components/src/overlay/floating_panel.rs
expression: snapshot_attrs(&minimized.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-focus-visible",
            ),
            String(
                "true",
            ),
        ),
        (
            Data(
                "ars-minimized",
            ),
            String(
                "true",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "floating-panel",
            ),
        ),
        (
            Data(
                "ars-stage",
            ),
            String(
                "minimized",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "minimized",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "floating-panel-title",
            ),
        ),
        (
            Aria(
                Modal,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "floating-panel",
            ),
        ),
        (
            Role,
            String(
                "dialog",
            ),
        ),
    ],
    styles: [
        (
            Width,
            "400px",
        ),
        (
            Height,
            "300px",
        ),
        (
            Position,
            "fixed",
        ),
        (
            Top,
            "100px",
        ),
        (
            Left,
            "100px",
        ),
        (
            ZIndex,
            "90",
        ),
    ],
}
